# dns_analysis

./: README.md  pyproject.toml
data/: 0_basic_dns.tex  2_universities_nameservers.tex  3_ldns_rtt.tex  Colleges.csv  adns_rtt.csv  adns_rtt_1.csv  adns_rtt_2.csv  hostnames.csv  hostnames_attl.csv  hostnames_attl.tex  ldns.csv  ldns_hits_1.csv  ldns_hits_2.csv  universities.csv  universities_nameservers.csv
scripts/: 0_basic_dns.py  0_get_university_domains.py  1_basic_dns.py  2_get_stats.py  2a_organizations.py  2b_get_stats.py  3a_ldns.py  3b_poke_ldns.py  3c_plot_ldns.py  3d_get_attl.py  4a_measure_rtt_adns.py  4b_plot_rtt_adns.py
src/dnsclient/: __init__.py
