[project]
name = "dnsclient"
version = "0.1.0"
description = "DNS client that wraps the dig CLI tool for querying and analyzing DNS records."
readme = "README.md"
authors = [{ name = "Javier Vela", email = "javier.vela00@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "tabulate>=0.9.0",
]
